Fixed hamburger menu, images and fonts on mobile,

--- a/css/style.css
+++ b/css/style.css
@@ -346,13 +346,13 @@ nav ul li.active a:hover {
 
 
 a.button-collapse {
-  /* color: #0D47A1;
+  margin: 0 1rem 0 0;
   text-decoration: none;
-  margin-left: 0; */
+
 }
 
 a.button-collapse i {
-  /* font-size: 2rem; */
+  color: #0D47A1;
 }
 
 @media screen and (min-width: 600px) {
@@ -572,26 +572,31 @@ ul.list-items>li {
 
 .my-role .row.flex-container {
   display: flex;
-  
-  /* flex-direction: column; */
+  flex-direction: column;
  
 }
 
 .my-role .row.flex-container > .col {
-  /* border-bottom: solid 1px rgb(244, 229, 148); */
-  /* margin-right: 20px; */
   padding-bottom: 1rem;
-  /* padding: 0.5rem 0rem 1.5rem; */
-  margin: 0 20px 0 0;
-  /* margin-left: 0; */
-  /* background-color: rgba(244, 229, 148, 0.20); */
-  /* border-radius: 4px; */
-  /* margin-right:  */
+  margin: 1rem 1rem 0 0;
 }
 
 .my-role .row.flex-container > .col:last-child {
   margin-right: 0;
 }
+
+
+@media screen and (min-width: 450px) {
+  .my-role .row.flex-container {
+    flex-direction: row;
+  }
+  .my-role .row.flex-container > .col {
+    margin-top: 0;
+  }
+  
+}
+
+
 
 .circular-mask img {
   border-radius: 0.25rem;
